k8s/namespaces/weblogic/maximo/maximo-cluster1.yaml
kind: Service
apiVersion: v1
metadata:
 name: wls-cluster-1
spec:
 type: LoadBalancer
 selector:
   weblogic.clusterName: cluster-1
   weblogic.domainUID: maximo
 ports:
 - port: 8001
   targetPort: 8001
