k8s/namespaces/weblogic/maximo/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "ingress-route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: maximo-admin-server
          servicePort: 7001
        path: "/console"
      - backend:
          serviceName: maximo-cluster-cluster-1
          servicePort: 8001
        path: "/maximo"
      - backend:
          serviceName: maximo-cluster-cluster-1
          servicePort: 8001
        path: "/wls-exporter"
